// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table caption renders 1`] = `
.c2 {
  display: none;
}

.c1 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media all and (min--moz-device-pixel-ratio:0) {
  .c1 {
    table-layout: fixed;
  }
}

<div
  className="c0"
>
  <table
    className="c1"
  >
    <caption
      className="c2"
    >
      Caption
    </caption>
  </table>
</div>
`;

exports[`Table renders 1`] = `
.c1 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media all and (min--moz-device-pixel-ratio:0) {
  .c1 {
    table-layout: fixed;
  }
}

<div
  className="c0"
>
  <table
    className="c1"
  />
</div>
`;

exports[`TableBody renders 1`] = `
.c1 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media all and (min--moz-device-pixel-ratio:0) {
  .c1 {
    table-layout: fixed;
  }
}

<div
  className="c0"
>
  <table
    className="c1"
  >
    <tbody
      className=""
    />
  </table>
</div>
`;

exports[`TableCell plain renders 1`] = `
.c3 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
  vertical-align: bottom;
}

.c2 {
  height: 100%;
}

.c1 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media all and (min--moz-device-pixel-ratio:0) {
  .c1 {
    table-layout: fixed;
  }
}

<div
  className="c0"
>
  <table
    className="c1"
  >
    <thead
      className=""
    >
      <tr
        className="c2"
      >
        <td
          className="c3"
        />
      </tr>
    </thead>
  </table>
</div>
`;

exports[`TableCell renders 1`] = `
.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  border-top: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c3 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
  vertical-align: bottom;
}

.c5 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
}

.c7 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
  vertical-align: top;
}

.c2 {
  height: 100%;
}

.c1 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width:768px) {
  .c4 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width:768px) {
  .c6 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c6 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c6 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width:768px) {
  .c8 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c8 {
    border-top: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c8 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c8 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media all and (min--moz-device-pixel-ratio:0) {
  .c1 {
    table-layout: fixed;
  }
}

<div
  className="c0"
>
  <table
    className="c1"
  >
    <thead
      className=""
    >
      <tr
        className="c2"
      >
        <td
          className="c3"
        >
          <div
            className="c4"
          />
        </td>
      </tr>
    </thead>
    <tbody
      className=""
    >
      <tr
        className="c2"
      >
        <td
          className="c5"
        >
          <div
            className="c6"
          />
        </td>
      </tr>
    </tbody>
    <tfoot
      className=""
    >
      <tr
        className="c2"
      >
        <td
          className="c7"
        >
          <div
            className="c8"
          />
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`TableCell scope renders 1`] = `
.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c3 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
  vertical-align: bottom;
}

.c5 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
}

.c2 {
  height: 100%;
}

.c1 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width:768px) {
  .c4 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width:768px) {
  .c6 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c6 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c6 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media all and (min--moz-device-pixel-ratio:0) {
  .c1 {
    table-layout: fixed;
  }
}

<div
  className="c0"
>
  <table
    className="c1"
  >
    <thead
      className=""
    >
      <tr
        className="c2"
      >
        <th
          className="c3"
          scope="col"
        >
          <div
            className="c4"
          />
        </th>
      </tr>
    </thead>
    <tbody
      className=""
    >
      <tr
        className="c2"
      >
        <th
          className="c5"
          scope="row"
        >
          <div
            className="c6"
          />
        </th>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`TableCell size renders 1`] = `
.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c3 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
  width: 96px;
  max-width: 96px;
  overflow: hidden;
}

.c5 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
  width: 192px;
  max-width: 192px;
  overflow: hidden;
}

.c6 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
  width: 384px;
  max-width: 384px;
  overflow: hidden;
}

.c7 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
  width: 768px;
  max-width: 768px;
  overflow: hidden;
}

.c8 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
  width: 50%;
  max-width: 50%;
  overflow: hidden;
}

.c9 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
  width: 33.33%;
  max-width: 33.33%;
  overflow: hidden;
}

.c10 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
  width: 66.66%;
  max-width: 66.66%;
  overflow: hidden;
}

.c11 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
  width: 25%;
  max-width: 25%;
  overflow: hidden;
}

.c12 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
  width: 75%;
  max-width: 75%;
  overflow: hidden;
}

.c2 {
  height: 100%;
}

.c1 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width:768px) {
  .c4 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media all and (min--moz-device-pixel-ratio:0) {
  .c1 {
    table-layout: fixed;
  }
}

<div
  className="c0"
>
  <table
    className="c1"
  >
    <tbody
      className=""
    >
      <tr
        className="c2"
      >
        <td
          className="c3"
          size="xsmall"
        >
          <div
            className="c4"
          />
        </td>
        <td
          className="c5"
          size="small"
        >
          <div
            className="c4"
          />
        </td>
        <td
          className="c6"
          size="medium"
        >
          <div
            className="c4"
          />
        </td>
        <td
          className="c7"
          size="large"
        >
          <div
            className="c4"
          />
        </td>
      </tr>
    </tbody>
  </table>
  <table
    className="c1"
  >
    <tbody
      className=""
    >
      <tr
        className="c2"
      >
        <td
          className="c8"
          size="1/2"
        >
          <div
            className="c4"
          />
        </td>
        <td
          className="c8"
          size="2/4"
        >
          <div
            className="c4"
          />
        </td>
      </tr>
    </tbody>
  </table>
  <table
    className="c1"
  >
    <tbody
      className=""
    >
      <tr
        className="c2"
      >
        <td
          className="c9"
          size="1/3"
        >
          <div
            className="c4"
          />
        </td>
        <td
          className="c10"
          size="2/3"
        >
          <div
            className="c4"
          />
        </td>
      </tr>
    </tbody>
  </table>
  <table
    className="c1"
  >
    <tbody
      className=""
    >
      <tr
        className="c2"
      >
        <td
          className="c11"
          size="1/4"
        >
          <div
            className="c4"
          />
        </td>
        <td
          className="c12"
          size="3/4"
        >
          <div
            className="c4"
          />
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`TableCell verticalAlign renders 1`] = `
.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c6 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
  vertical-align: bottom;
}

.c3 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
  vertical-align: top;
}

.c5 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
  vertical-align: middle;
}

.c2 {
  height: 100%;
}

.c1 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width:768px) {
  .c4 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media all and (min--moz-device-pixel-ratio:0) {
  .c1 {
    table-layout: fixed;
  }
}

<div
  className="c0"
>
  <table
    className="c1"
  >
    <thead
      className=""
    >
      <tr
        className="c2"
      >
        <td
          className="c3"
        >
          <div
            className="c4"
          />
        </td>
        <td
          className="c5"
        >
          <div
            className="c4"
          />
        </td>
        <td
          className="c6"
        >
          <div
            className="c4"
          />
        </td>
      </tr>
    </thead>
  </table>
</div>
`;

exports[`TableFooter renders 1`] = `
.c1 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media all and (min--moz-device-pixel-ratio:0) {
  .c1 {
    table-layout: fixed;
  }
}

<div
  className="c0"
>
  <table
    className="c1"
  >
    <tfoot
      className=""
    />
  </table>
</div>
`;

exports[`TableHeader renders 1`] = `
.c1 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media all and (min--moz-device-pixel-ratio:0) {
  .c1 {
    table-layout: fixed;
  }
}

<div
  className="c0"
>
  <table
    className="c1"
  >
    <thead
      className=""
    />
  </table>
</div>
`;

exports[`TableRow renders 1`] = `
.c2 {
  height: 100%;
}

.c1 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media all and (min--moz-device-pixel-ratio:0) {
  .c1 {
    table-layout: fixed;
  }
}

<div
  className="c0"
>
  <table
    className="c1"
  >
    <tbody
      className=""
    >
      <tr
        className="c2"
      />
    </tbody>
  </table>
</div>
`;
